# decentramind-platform

./: .gitignore  .prettierignore  .prettierrc  AGENT_TASK_MANAGEMENT_GUIDE.md  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  COMPREHENSIVE_DOCUMENTATION_AUDIT_REPORT.md  COMPREHENSIVE_DOCUMENTATION_UPDATE_SUMMARY.md  COMPREHENSIVE_MVP_AUDIT_REPORT.md  CORRECTED_MVP_AUDIT_REPORT.md  CURRENT_CONTRACT_ADDRESSES.md  DEEP_DEBUG_AGENT_ECONOMIC_SYNC_REPORT.md  DEEP_REVIEW_IMPLEMENTATION_SUMMARY.md  DEVNET_DEPLOYMENT_READY.md  DEVNET_DEPLOYMENT_RESULTS.md  DEVNET_DEPLOYMENT_STATUS.md  DEVNET_INTEGRATION_STATUS.md  DOCUMENTATION_STRUCTURE_MAP.md  DOCUMENTATION_UPDATE_SUMMARY.md  DYNAMIC_NFT_AVATAR_FINAL_STATUS.md  ECONOMIC_DASHBOARDS_INVESTIGATION_REPORT.md  ECONOMIC_FEATURES_TESTING_CHECKLIST.md  FEATURE_STATUS_TABLE.md  FINAL_DEVNET_STATUS.md  FRONTEND_ARCHITECTURE.md  FRONTEND_INTEGRATION_GUIDE.md  FRONTEND_REFACTOR_SUMMARY.md  FRONTEND_STATUS.md  FULL_STACK_INTEGRATION_AUDIT_REPORT.md  FULL_STACK_INTEGRATION_SUCCESS_REPORT.md  HOSPITAL_INTEGRATION_COMPONENTS_README.md  LANDING_PAGE_CONFIGURATION.md  LANDING_PAGE_README.md  LICENSE  MANUAL_TESTING_STATUS.md  MANUAL_TESTING_STATUS_REPORT.md  MD_FILES_AUDIT_REPORT.md  MD_FILES_AUDIT_SUMMARY.md  MENU_CLEANUP_RECOMMENDATIONS.md  MVP_AUDIT_SUMMARY.md  (+67 more)
.github/: PULL_REQUEST_TEMPLATE.md
app/: globals.css  layout.tsx  page.tsx
docs/: API.md  ARCHITECTURE.md  AUDIT_SUMMARY.md  DEPLOYMENT.md  DML_STRATEGY.md  N8N_INTEGRATION.md  (+4 more)
onchain/programs/agent/: Cargo.toml
onchain/programs/agent/src/: agent_evolution.rs  lib.rs  sub_agent.rs
(+387 files in other folders)
