[package]
name = "decentramind-agent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.18.26"
borsh = "0.10.4"
thiserror = "1.0.69"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[target.bpfel-unknown-unknown]
rustflags = [
    "-C", "link-arg=-z",
    "-C", "link-arg=stack-size=65536",
] 